feat: project members and roles
